<resources>
    <string name="app_name">Harta Banilor Publici</string>
    <string name="title_map">Hartă</string>
    <string name="title_search">Caută</string>
    <string name="title_top">Statistici</string>
    <string name="title_info">Info</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_activityasdas">Map</string>
    <string name="info_tile1"><b>Harta Banilor Publici (HBP)</b> este prima aplicație din România care îți
        arată cu acuratețe toate achizițiile publice realizate de toate instituțiile publice din România din 2007 până în 2017</string>
    <string name="info_tile2">În <b>Harta Banilor Publici</b> găsești: \n
    \t<b>13.731</b> instituții publice\n
    \t<b>72.897</b> companii\n
    \t<b>8.839.409</b> achiziții publice din care:\n
        \t\t\t<b>7.946.406</b> achiziții directe\n
        \t\t\t<b>893.003</b> licitații</string>

    <string name="info_tile3"><b>HBP</b> folosește ca surse de date: www.data.gov.ro, SEAP,
        Ministerul Finanțelor si Google Maps API. <b>HBP</b> nu colectează date despre utilizatorii aplicației.
    </string>

    <string name="info_tile4"><b>Știați că</b>: potrivit datelor de pe www.data.gov.ro, orașul Cluj-Napoca apare
        scris în mai multe feluri, afectând astfel orice încercare de a estima în mod corect cheltuielile publice?
        De aceea, am corectat erorile de scriere pentru toate intrările, am automatizat corectarea lor,
        astfel încât să vă prezentăm situația cheltuielilor publice cu acuratețe.
    </string>

    <string name="info_tile5"><b>HBP</b> nu folosește sau colectează date personale despre utilizatori. Pentru statistici mai avansate, vizitează versiunea web: www.hartabanilorpublici.ro

    </string>
</resources>
