<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_bottom"
            android:elevation="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_c_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:dividerHeight="@dimen/dividerHeight"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/hbp_logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="55dp"
                    android:paddingBottom="10dp"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:text=" este un proiect "
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:textColor="#000000" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ir_logo"
                    android:layout_weight="2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_bottom"
            android:elevation="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_c_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:dividerHeight="@dimen/dividerHeight"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info_tile1"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_bottom"
            android:elevation="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_c_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:dividerHeight="@dimen/dividerHeight"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info_tile2"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_bottom"
            android:elevation="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_c_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:dividerHeight="@dimen/dividerHeight"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:linksClickable="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info_tile3"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_bottom"
            android:elevation="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_c_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:dividerHeight="@dimen/dividerHeight"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:linksClickable="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info_tile4"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_bottom"
            android:elevation="@dimen/card_elevation"
            card_view:cardElevation="@dimen/card_c_elevation"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true"
            android:dividerHeight="@dimen/dividerHeight"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            card_view:cardCornerRadius="@dimen/cardCornerRadius">

            <TextView
                android:id="@+id/info_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info_tile5"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>